--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: cat_tinder6_sp22_development
+  database: dpl_real_estate_sp22_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: cat_tinder6_sp22_test
+  database: dpl_real_estate_sp22_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: cat_tinder6_sp22_production
-  username: cat_tinder6_sp22
-  password: <%= ENV['CAT_TINDER6_SP22_DATABASE_PASSWORD'] %>
+  database: dpl_real_estate_sp22_production
+  username: dpl_real_estate_sp22
+  password: <%= ENV['dpl_real_estate_sp22_DATABASE_PASSWORD'] %>
