--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.26.1",
+    "axios-hooks": "^3.0.1",
     "bootstrap": "5.1.3",
     "devise-axios": "^1.0.24",
     "react": "^17.0.2",
